# ml-fraud-detection-api

./: .dockerignore  .env.sample  .gitignore  Makefile  README.md  dev-requirements.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/api/: devcontainer.json  docker-compose.yml
.devcontainer/frontend/: devcontainer.json
.github/workflows/: ci.yml
api/: config.py  database.py  main.py  models.py  schemas.py
api/core/: exceptions.py  logfire.py  model_loader.py
api/domain/: __init__.py  fraud_scoring.py
api/repositories/: __init__.py  transactions.py
api/routers/: transactions.py
api/services/: csv_import.py  scoring.py
app/: config.py  database.py  enums.py  main.py  models.py  schemas.py
app/core/: logfire.py  model_loader.py
app/domain/: __init__.py  fraud_scoring.py
app/inference/: predictor.py
app/repositories/: __init__.py
app/routers/: predict.py  score.py  transactions.py
app/services/: scoring.py
app/tests/: conftest.py  test_score.py  test_transactions.py
app/utils/: logger.py
artifacts/: model.joblib
dashboard/: README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  theme.ts
dashboard/app/import/: page.tsx
dashboard/app/score/: page.tsx
dashboard/app/scores/: page.tsx
dashboard/app/transactions/: page.tsx
dashboard/app/transactions/[id]/: page.tsx
dashboard/components/: Dashboard.tsx  ImportTransactionsForm.tsx  Navigation.tsx  ScoreTransactionForm.tsx  ScoresList.tsx  TransactionDetails.tsx  TransactionsList.tsx
dashboard/types/: api.ts
db/: create_db.sql
deploy/nginx/: default.conf
docker/: docker-compose.base.yml  docker-compose.devcontainer.yml  docker-compose.yml
dockerfiles/: app.dockerfile
scripts/: import_transactions.py
tests/: conftest.py  test_db_config.py  test_exceptions.py  test_import_transactions.py  test_model_loader.py  test_score.py  test_scoring_service.py  test_transactions.py
